# lium-rs

./: .gitignore  Cargo.toml  LLM.txt  README.md  REFACTOR.md  justfile
.github/workflows/: release.yml
crates/lium-api/: Cargo.toml  README.md
crates/lium-api/src/: client.rs  errors.rs  lib.rs  sdk.rs
crates/lium-cli/: Cargo.toml  README.md
crates/lium-cli/src/: config.rs  display.rs  helpers.rs  lib.rs  resolvers.rs  storage.rs
crates/lium-cli/src/commands/: config.rs  down.rs  exec.rs  fund.rs  image.rs  init.rs  ls.rs  mod.rs  ps.rs  rsync.rs  scp.rs  ssh.rs  theme.rs  up.rs
crates/lium-core/: Cargo.toml  README.md
crates/lium-core/src/: errors.rs  lib.rs  models.rs  optimization.rs  utils.rs
crates/lium-utils/: Cargo.toml  README.md
crates/lium-utils/src/: docker.rs  errors.rs  id_generator.rs  lib.rs  parsers.rs  pod.rs  ssh.rs
scripts/: install.sh  uninstall.sh
src/: api.rs  cli.rs  config.rs  display.rs  errors.rs  formatters.rs  gpu_utils.rs  helpers.rs  lib.rs  main.rs  models.rs  parsers.rs  pod_utils.rs  resolvers.rs  sdk.rs  ssh_utils.rs  storage.rs  utils.rs
src/commands/: down.rs  exec.rs  fund.rs  image.rs  init.rs  ls.rs  mod.rs  ps.rs  rsync.rs  ssh.rs  theme.rs  up.rs
