[package]
name = "lium-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lium"
path = "src/main.rs"

[lib]
name = "lium_rs"
path = "src/lib.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
rust-ini = "0.20"

# SSH
ssh2 = "0.9"

# Docker
bollard = "0.16"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Terminal UI
termcolor = "1.4"
colored = "2.1"
dialoguer = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File operations
home = "0.5"

# Async runtime
futures = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.10"

# Base64 for SSH keys
base64 = "0.21"

# Environment variables
dotenv = "0.15"

# Process execution
which = "4.4"

# URL parsing
url = "2.4"
rand = "0.9.1"
