[workspace]
members = [
    "crates/lium-core",
    ".",
]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Regex
regex = "1.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[package]
name = "lium-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lium"
path = "src/main.rs"

[lib]
name = "lium_rs"
path = "src/lib.rs"

[dependencies]
# Local crates
lium-core = { path = "crates/lium-core" }

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
rust-ini = "0.20"

# SSH
ssh2 = "0.9"

# Docker
bollard = "0.16"

# UUID generation
uuid = { workspace = true }

# Terminal UI
termcolor = "1.4"
colored = "2.1"
dialoguer = "0.11"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# File operations
home = "0.5"
dirs = "5.0"

# Async runtime
futures = { workspace = true }

# Date/time
chrono = { workspace = true }

# Regex
regex = { workspace = true }

# Base64 for SSH keys
base64 = "0.21"

# Environment variables
dotenv = "0.15"

# Process execution
which = "4.4"

# URL parsing
url = "2.4"
rand = "0.9.1"
