[workspace]
members = [
    "crates/lium-core",
    "crates/lium-utils", 
    "crates/lium-api",
    "crates/lium-cli",
    ".",
]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Regex
regex = "1.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[package]
name = "lium-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lium"
path = "src/main.rs"

[dependencies]
# CLI interface - this now contains all the functionality
lium-cli = { path = "crates/lium-cli" }

# Minimal runtime for main.rs
tokio = { workspace = true }
